Fix button shift issue on index pages

--- a/app/assets/stylesheets/product_reports.scss
+++ b/app/assets/stylesheets/product_reports.scss
@@ -1,7 +1,7 @@
 // Place all the styles related to the ProductReports controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.index a.btn {
+.product_reports .index a.btn {
   margin-left: -150px;
 }
 
